# cgcmake

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  build.bat
modules/: FindDirectX.cmake  FindEigen3.cmake  FindGLEW.cmake  FindGLFW.cmake  FindKinect.cmake  FindMaya.cmake  FindOpenColorIO.cmake  FindOpenImageIO.cmake  FindPTex.cmake  FindVisualStudio.cmake
toolchain/: 2017.cmake  2020.cmake
